	* src/nano.c (do_input): Do not continue when there is a spurious
	mouse event (a touch of the touchpad, for example) but get out.
	Continuing would result in the cutbuffer being cleared upon the
	next cut.  These two changes together fix Savannah bug #42326.
	* src/nano.c (do_input): Always accept mouse events, also when
	just looking for Unjustify.  This fixes Savannah bug #42322.

2014-06-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c, src/files.c, src/nano.c src/prompt.c, src/winio.c:
	A few minimalistic whitespace adjustments.
	* src/rcfile.c (check_bad_binding): Avoid a compiler warning.

2014-06-10  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/winio.c: One more type fix and two tiny message tweaks.

2014-06-09  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/*.c: Cosmetic tweaks of comments and whitespace.
	* src/help.c, src/rcfile.c, src/winio.c: Elide a function call by
	not comparing with an empty string but checking for the final \0.
	* src/files.c, src/nano.c, src/text.c, src/winio.c: Type fixes in
	debugging stuff -- line numbers are long, x positions unsigned long.
	* src/files.c, src/move.c, src/nano.c, src/text.c, src/winio.c:
	Make tiny nano a bit tinier by preening out some soft-wrap stuff.
	* src/global.c, src/nano.c, src/winio.c: A few more cosmetic tweaks
	(whitespace, order, braces, parentheses, and a typo) and type fixes.

2014-06-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (do_input): Remove two superfluous false conditions.
	* src/nano.h, src/text.c (add_undo): Avoid a compiler warning with
	--disable-wrapping.

2014-06-09  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_undo, do_redo, add_undo, update_undo, do-wrap):
	Rewrite the line-wrapping code to make use of the existing line-break
	code.  And undo line wraps together with their causal text additions,
	and not as separate actions because the user did not make them.

2014-06-08  Mark Majeres  <mark@engine12.com>